# Telegraph

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile  README.md  _c_make_lists_8txt.html  abstract__graph_8hpp.html  abstract__graph_8hpp.js  abstract__graph_8hpp__dep__incl.map  abstract__graph_8hpp__dep__incl.md5  abstract__graph_8hpp__incl.map  abstract__graph_8hpp__incl.md5  abstract__graph_8hpp_source.html  abstract__graph_8ipp.html  abstract__graph_8ipp__dep__incl.map  abstract__graph_8ipp__dep__incl.md5  abstract__graph_8ipp__incl.map  abstract__graph_8ipp__incl.md5  abstract__graph_8ipp_source.html  annotated.html  annotated_dup.js  class_a_l_r_e_a_d_y___d_e_f_i_n_e_d-members.html  class_a_l_r_e_a_d_y___d_e_f_i_n_e_d.html  class_a_l_r_e_a_d_y___d_e_f_i_n_e_d.js  class_a_l_r_e_a_d_y___d_e_f_i_n_e_d__coll__graph.map  class_a_l_r_e_a_d_y___d_e_f_i_n_e_d__coll__graph.md5  class_abstract_graph-members.html  class_abstract_graph.html  class_abstract_graph.js  class_abstract_graph__coll__graph.map  class_abstract_graph__coll__graph.md5  class_abstract_graph__inherit__graph.map  class_abstract_graph__inherit__graph.md5  class_abstract_graph_a57be1d700f04ae072f9d2014e2da56c8_icgraph.map  class_abstract_graph_a57be1d700f04ae072f9d2014e2da56c8_icgraph.md5  class_abstract_graph_a61cf6d858b5a13dcbd9c64f6e333e942_icgraph.map  class_abstract_graph_a61cf6d858b5a13dcbd9c64f6e333e942_icgraph.md5  class_abstract_graph_a6e84967a418fc92211c91cc78aa0b415_icgraph.map  (+317 more)
.github/workflows/: build.yml  docs.yml  gh-pages.yml
benchmarks/: CMakeLists.txt
benchmarks/telegraph/: containers.cpp
include/telegraph/: exceptions.hpp  requires.hpp  telegraph  types.hpp
include/telegraph/container/: abstract_graph.hpp  abstract_graph.ipp  dense_graph.hpp  dense_graph.ipp  operators.hpp
include/telegraph/containers/: abstract_graph.hpp  abstract_graph.ipp  dense_graph.hpp  dense_graph.ipp  directed_dense_graph.hpp  directed_dense_graph.ipp  directed_graph.hpp  directed_graph.ipp
include/telegraph/interface/: abstract_graph.hpp  abstract_graph.ipp  exceptions.hpp  interface_graph.hpp  interface_graph.ipp
include/telegraph/operators/: operators.hpp  operators.ipp
include/telegraph/structure/: abstract_graph.hpp  abstract_graph.ipp  exceptions.hpp  interface_graph.hpp  interface_graph.ipp
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+18 more)
tests/: CMakeLists.txt
tests/telegraph/: container.cpp  containers.cpp  operators.cpp
